src/Components/Global/Graphic/infoBlocks.scss
.tgl-btns-info {
  position: absolute;
  top: -48px;
  right: -30px;
  max-width: 160px;
  width: 100%;
  min-height: 45px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  padding: 6px 9px;
  border-radius: 5px;
  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
  background-color: var(--color-white);
  z-index: 9;

  p {
    font-size: 0.5625rem;
    line-height: 0.6875rem;
    letter-spacing: -0.02rem;
    color: var(--color-black);
  }
}

.tgl-btns-info.price {
  right: -20px;
}

.tgl-btns-info.sentiment {
  right: -40px;
}

.tgl-btns-info.mentions {
  right: -35px;
}

.tgl-btns-info.bull,
.tgl-btns-info.talk_rate,
.tgl-btns-info.positive_negative {
  top: -78px;
  right: -65px;
}

.tgl-btns-info::before {
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  bottom: -10px;
  right: 70px;
  z-index: 9;
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 10px solid var(--color-white);
}

